# krag-video-platform

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
configs/: .env.example  default.yaml
data/: example_playbook.json
docs/: agents.md  architecture.md  data-models.md  evaluation.md  gtm.md  infra.md  krag.md  pilot_feedback.md  pilots.md  pipelines.md  roadmap.md  vision.md
docs/adr/: 001-deterministic-pipeline-architecture.md  template.md
examples/: story_001.txt
examples/founder_preview_real/: README.md
examples/pilot_demo/: example_pilot.json  founder_instructions.txt  pilot_outcome_report.md  pilot_runbook.txt
scripts/: run_demo.py  run_pilot.py
src/agents/: __init__.py  base.py  critic.py  director.py  story_parser.py
src/brand/: __init__.py  bias.py  context.py
src/common/: __init__.py  config.py  logging.py
src/common/models/: __init__.py  asset.py  audio.py  base.py  entities.py  feedback.py  pipeline.py  scene.py  shot.py  story.py
src/editing/: __init__.py  editorial.py  rhythm.py
src/founder/: __init__.py  feedback.py  metrics.py  review_pack.py  scenario.py
src/founder_simulation/: __init__.py  generator.py  personas.py
src/generation/: __init__.py  asset_generator.py  audio_generator.py  fidelity_policy.py  manifest.py  pipeline.py  placeholder.py  reference_generator.py  renderer.py
src/knowledge_graph/: __init__.py  client.py  operations.py  scene_graph.py  schema.py
src/marketing/: __init__.py  adapter.py  intent.py  summary.py  validation.py
src/orchestration/: __init__.py  feedback_consumer.py  refinement.py
src/pilot/: __init__.py  artifacts.py  outcome.py  run.py  runbook.py
src/playbook/: __init__.py  aggregation.py  apply.py  playbook.py
src/rag/: __init__.py  client.py  embeddings.py  indexing.py
src/validation/: __init__.py  batch.py  report.py
tests/: conftest.py
tests/integration/: test_e2e.py  test_neo4j.py  test_pilot_feedback_workflow.py  test_qdrant.py  test_video_rendering.py
tests/unit/: test_agents.py  test_director.py  test_founder_simulation.py  test_generation.py  test_models.py  test_pilot_feedback.py  test_refinement.py
