[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "krag-video-platform"
version = "0.1.0"
description = "KRAG-driven AI video creation platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "KRAG Team" }
]
keywords = ["ai", "video", "generation", "rag", "knowledge-graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Async
    "asyncio>=3.4.3",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",

    # API
    "fastapi>=0.108.0",
    "uvicorn>=0.25.0",

    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "neo4j>=5.15.0",

    # Vector Store
    "qdrant-client>=1.7.0",

    # Redis
    "redis>=5.0.0",

    # LLM Providers
    "openai>=1.6.0",
    "anthropic>=0.8.0",

    # Embeddings
    "tiktoken>=0.5.0",

    # Media Processing
    "ffmpeg-python>=0.2.0",
    "Pillow>=10.1.0",

    # Utilities
    "structlog>=23.2.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "ipython>=8.19.0",
]

[project.urls]
"Homepage" = "https://github.com/your-org/krag-video-platform"
"Bug Tracker" = "https://github.com/your-org/krag-video-platform/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hatch
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
